# ai-panel

./: .gitignore  AI Panel.command  DESIGN.md  README.md  agents.yaml  ai-panel  open-ai-panel  pyproject.toml
examples/: topic.md
src/ai_panel/: __init__.py  __main__.py  cli.py  config.py  panel.py  prompts.py  runner.py  server.py  storage.py
tests/: test_cli_flow.py  test_config.py  test_runner.py  test_server.py
